Add note about otter code cell in instructions

--- a/hwk1-task2-corals.ipynb
+++ b/hwk1-task2-corals.ipynb
@@ -45,6 +45,8 @@
     "- **Make at least 5 commits at moments you think are adequate.** We'll check your repository and view the commit history.\n",
     "\n",
     "- **Add comments for all your code.** Err on the side of commenting too much for now. Comments should follow best practices.\n",
+    "\n",
+    "- **Do not update the top cell with the `otter` import**, this is used internally for grading.\n",
     "\n"
    ]
   },
@@ -90,7 +92,7 @@
     "Read in the data from the URL using the `pd.read_csv` function and store it as `coral_div` like this:\n",
     "\n",
     "```\n",
-    "# read in data\n",
+    "# Read in data\n",
     "coral_div = pd.read_csv('the URL goes here')\n",
     "```"
    ]
@@ -141,7 +143,7 @@
    },
    "outputs": [],
    "source": [
-    "#a\n",
+    "# a\n",
     "\n",
     "rows = ...\n",
     "columns = ..."
@@ -165,7 +167,7 @@
    },
    "outputs": [],
    "source": [
-    "#b\n",
+    "# b\n",
     "coral_div_columns = ..."
    ]
   },
@@ -187,7 +189,7 @@
    },
    "outputs": [],
    "source": [
-    "#c\n",
+    "# c\n",
     "coral_div_types = ..."
    ]
   },
@@ -209,7 +211,7 @@
    },
    "outputs": [],
    "source": [
-    "#d\n",
+    "# d\n",
     "first_8_rows = ..."
    ]
   },
@@ -609,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
