--- a/hwk1-task3-earthquakes.ipynb
+++ b/hwk1-task3-earthquakes.ipynb
@@ -45,6 +45,8 @@
     "\n",
     "- **Add comments for all your code.** Err on the side of commenting too much for now. Comments should follow best practices.\n",
     "\n",
+    "- **Do not update the top cell with `otter` import** this is used internally for grading.\n",
+    "\n",
     "\n",
     "## Acknowledgement\n",
     "This task was adapted from the *Pandas Fundamentals with Earthquake Data* assignment from the e-book [Earth and Environmental Data Science](https://earth-env-data-science.github.io/intro.html)"
@@ -517,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
