Add grader check all for task 3

--- a/task3/hwk1-task3-earthquakes.ipynb
+++ b/task3/hwk1-task3-earthquakes.ipynb
@@ -655,6 +655,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "To double-check your work, the cell below will rerun all of the autograder tests."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grader.check_all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": false,
     "editable": false
