--- a/task2/hwk1-task2-corals.ipynb
+++ b/task2/hwk1-task2-corals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -29,9 +29,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**UPDATE THIS LINK:**\n",
+    "**MY LINK:**\n",
     "\n",
-    "[https://github.com/MEDS-eds-220/eds220-hwk-1]()"
+    "[https://github.com/zachyyy700/eds220-hwk1]()"
    ]
   },
   {
@@ -74,7 +74,13 @@
     ]
    },
    "source": [
-    "_Type your answer here, replacing this text._"
+    "Description:\n",
+    "\n",
+    "Citation: Tim McClanahan. (2023). Western Indian Ocean Coral Diversity. Knowledge Network for Biocomplexity. doi:10.5063/F1K35S3H.\n",
+    "\n",
+    "Access Date: September 25, 2025\n",
+    "\n",
+    "[Archive Link](https://knb.ecoinformatics.org/view/doi%3A10.5063%2FF1K35S3H#urn%3Auuid%3Ab9d486bb-ea8d-442d-8287-c66c0ce18425)"
    ]
   },
   {
@@ -801,9 +807,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "EDS 220 Environment",
+   "display_name": "eds220-env",
    "language": "python",
-   "name": "eds220-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -816,11 +822,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.4"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "fd47fb98a7ce7f6a10c657f2a810bfb9d752313f8f3dd9c5b44bfbb724ce30e0"
-   }
   }
  },
  "nbformat": 4,
