--- a/task2/hwk1-task2-corals-LOO.ipynb
+++ b/task2/hwk1-task2-corals-LOO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -11,7 +11,7 @@
    "source": [
     "# Initialize Otter\n",
     "import otter\n",
-    "grader = otter.Notebook(\"hwk1-task2-corals.ipynb\")"
+    "grader = otter.Notebook(\"hwk1-task2-corals-LOO.ipynb\")"
    ]
   },
   {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true,
     "tags": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -174,13 +174,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3_a</pre></strong> passed! 💯</p>"
+       "<p><strong><pre style='display: inline;'>q3_a</pre></strong> passed! 🚀</p>"
       ],
       "text/plain": [
        "q3_a results: All test cases passed!"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -224,13 +224,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3_b</pre></strong> passed! 🙌</p>"
+       "<p><strong><pre style='display: inline;'>q3_b</pre></strong> passed! 🚀</p>"
       ],
       "text/plain": [
        "q3_b results: All test cases passed!"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -274,13 +274,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3_c</pre></strong> passed! 💯</p>"
+       "<p><strong><pre style='display: inline;'>q3_c</pre></strong> passed! 🍀</p>"
       ],
       "text/plain": [
        "q3_c results: All test cases passed!"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -844,7 +844,7 @@
        "7    2019              3  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -866,13 +866,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3_d</pre></strong> passed! 🚀</p>"
+       "<p><strong><pre style='display: inline;'>q3_d</pre></strong> passed! 🍀</p>"
       ],
       "text/plain": [
        "q3_d results: All test cases passed!"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -1379,7 +1379,7 @@
        "max        19.000000  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,7 +1413,9 @@
     ]
    },
    "source": [
-    "_Type your answer here, replacing this text._"
+    "- **int64**s have no decimals\n",
+    "\n",
+    "- **float64**s do have decimals"
    ]
   },
   {
@@ -1433,6 +1435,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Tanzania', 'Mozambique', 'Kenya', 'Reunion', 'Comoros', 'Mayotte',\n",
+       "       'French Southern Territories', 'Madagascar', 'Seychelles',\n",
+       "       'South Africa', 'Mauritius'], dtype=object)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coral_div['Country'].unique()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -1440,7 +1464,9 @@
     ]
    },
    "source": [
-    "_Type your answer here, replacing this text._"
+    "- `coral_div['Country']`: Returns a series of this singular column and lists every single value\n",
+    "\n",
+    "- `coral_div['Country]`: Returns an array of only unique instances of each value"
    ]
   },
   {
@@ -1459,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -1467,17 +1493,31 @@
    },
    "outputs": [],
    "source": [
-    "unique_observers = ..."
+    "unique_observers = coral_div['Observer'].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q6</pre></strong> passed! 🌟</p>"
+      ],
+      "text/plain": [
+       "q6 results: All test cases passed!"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q6\")"
    ]
@@ -1504,6 +1544,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      False\n",
+       "1      False\n",
+       "2      False\n",
+       "3      False\n",
+       "4      False\n",
+       "       ...  \n",
+       "570    False\n",
+       "571    False\n",
+       "572    False\n",
+       "573    False\n",
+       "574    False\n",
+       "Name: Coralcover, Length: 575, dtype: bool"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coral_div['Coralcover'] >= 50"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -1511,7 +1582,7 @@
     ]
    },
    "source": [
-    "_Type your answer here, replacing this text._"
+    "- `coral_div['Coralcover'] >= 50` will return a series of Boolean values. True where the condition is true and false where the condition is false."
    ]
   },
   {
@@ -1536,7 +1607,7 @@
     ]
    },
    "source": [
-    "_Type your answer here, replacing this text._"
+    "- `coral_div[coral_div['Coralcover'] >= 50]` will select rows where the **Coralcover** column is greater or equal to 50"
    ]
   },
   {
