--- a/task3/hwk1-task3-earthquakes-LOO.ipynb
+++ b/task3/hwk1-task3-earthquakes-LOO.ipynb
@@ -183,7 +183,7 @@
          "type": "string"
         }
        ],
-       "ref": "a66d5078-8870-4262-8e10-41165f339bc4",
+       "ref": "cfe29ef5-1b62-4f9e-8002-acb537e85fe4",
        "rows": [
         [
          "0",
@@ -423,7 +423,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2_a</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>q2_a</pre></strong> passed! 🙌</p>"
       ],
       "text/plain": [
        "q2_a results: All test cases passed!"
@@ -497,7 +497,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2_b</pre></strong> passed! 🙌</p>"
+       "<p><strong><pre style='display: inline;'>q2_b</pre></strong> passed! 🌟</p>"
       ],
       "text/plain": [
        "q2_b results: All test cases passed!"
@@ -547,7 +547,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2_c</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>q2_c</pre></strong> passed! 🙌</p>"
       ],
       "text/plain": [
        "q2_c results: All test cases passed!"
@@ -694,7 +694,7 @@
          "type": "string"
         }
        ],
-       "ref": "027b2e0f-a68d-4811-8f47-dc75b0fe6323",
+       "ref": "fd0c6c03-b9c5-420c-8e0c-11fc60550605",
        "rows": [
         [
          "ak11155107",
@@ -1409,7 +1409,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q4_a</pre></strong> passed! 🌟</p>"
+       "<p><strong><pre style='display: inline;'>q4_a</pre></strong> passed! 🌈</p>"
       ],
       "text/plain": [
        "q4_a results: All test cases passed!"
@@ -1501,7 +1501,7 @@
          "type": "string"
         }
        ],
-       "ref": "85222f65-cdc6-4847-ad8e-6d098d6ac705",
+       "ref": "e61830de-2e2a-4fb1-9795-e0aff3f242ff",
        "rows": [
         [
          "ak11155107",
@@ -1647,7 +1647,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q4_b</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>q4_b</pre></strong> passed! 💯</p>"
       ],
       "text/plain": [
        "q4_b results: All test cases passed!"
@@ -1686,7 +1686,8 @@
    },
    "outputs": [],
    "source": [
-    "omitted_events = raw_eqk[raw_eqk['type'] != 'earthquake'].shape[0]"
+    "# Use != to find rows where the value is not earthquake\n",
+    "omitted_events = raw_eqk[raw_eqk['type'] != 'earthquake'].shape[0] # Access number of observations with shape indexing"
    ]
   },
   {
@@ -1700,7 +1701,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q5</pre></strong> passed! 💯</p>"
+       "<p><strong><pre style='display: inline;'>q5</pre></strong> passed! 🌟</p>"
       ],
       "text/plain": [
        "q5 results: All test cases passed!"
@@ -1759,6 +1760,7 @@
     }
    ],
    "source": [
+    "# Create histogram\n",
     "eqk['mag'].plot(kind='hist', title=\"Magnitude Histogram\", color='brown')"
    ]
   },
@@ -1814,7 +1816,7 @@
          "type": "float"
         }
        ],
-       "ref": "83bfb04f-9e80-402a-9a8c-d22e50f56a19",
+       "ref": "924acc08-a005-4bca-a7e9-c4517c3334b5",
        "rows": [
         [
          "usc000nzvd",
@@ -1948,7 +1950,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q7_a</pre></strong> passed! 🌟</p>"
+       "<p><strong><pre style='display: inline;'>q7_a</pre></strong> passed! 🎉</p>"
       ],
       "text/plain": [
        "q7_a results: All test cases passed!"
@@ -1977,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -1990,7 +1992,7 @@
        "<Axes: title={'center': 'Top 20 Most Powerful Earthquakes'}, xlabel='Magnitude', ylabel='Earthquake ID'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2006,6 +2008,7 @@
     }
    ],
    "source": [
+    "# Create horizontal bar plot\n",
     "top20.plot(kind='barh',\n",
     "           title = \"Top 20 Most Powerful Earthquakes\",\n",
     "           xlabel=\"Magnitude\",\n",
@@ -2055,27 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(list(top20.index))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -2083,6 +2066,7 @@
    },
    "outputs": [],
    "source": [
+    "# Select rows by top20.index and select columns with a list\n",
     "top20_filtered = eqk.loc[top20.index, ['place', 'mag', 'depth']]"
    ]
   },
@@ -2440,7 +2424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -2449,13 +2433,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q8</pre></strong> passed! 🚀</p>"
+       "<p><strong><pre style='display: inline;'>q8</pre></strong> passed! 🌟</p>"
       ],
       "text/plain": [
        "q8 results: All test cases passed!"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2484,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -2513,12 +2497,13 @@
     }
    ],
    "source": [
+    "# Create scatter plot\n",
     "eqk[eqk['mag'] > 5].plot.scatter(x='longitude', y='latitude',\n",
     "                         title=\"Earthquakes, Magnitude Greater Than 5.0\",\n",
-    "                         c='mag',\n",
-    "                         alpha=0.5,\n",
-    "                         colormap='spring',\n",
-    "                         s=60)"
+    "                         c='mag', # Color based on magnitude\n",
+    "                         alpha=0.5, # Adjust transparency\n",
+    "                         colormap='spring', # Change colormap\n",
+    "                         s=60) # Adjust size of points "
    ]
   },
   {
@@ -2532,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2559,7 +2544,7 @@
        "q8 results: All test cases passed!"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
