--- a/task2/hwk1-task2-corals-LOO.ipynb
+++ b/task2/hwk1-task2-corals-LOO.ipynb
@@ -75,7 +75,7 @@
    },
    "source": [
     "**Description:**\n",
-    "This dataset contains data for a study on coral diversity in the Western Indian Ocean\n",
+    "This dataset contains data for a study on coral diversity in the Western Indian Ocean from 1999 to 2022. The goal was to develop an ecological model to predict future coral biodiversity accounting for human influence.\n",
     "\n",
     "**Citation:**\n",
     "Tim McClanahan. (2023). Western Indian Ocean Coral Diversity. Knowledge Network for Biocomplexity. [doi:10.5063/F1K35S3H](https://knb.ecoinformatics.org/view/doi:10.5063/F1K35S3H)\n",
